--- a/data/broker/conf/broker.conf
+++ b/data/broker/conf/broker.conf
@@ -2,8 +2,9 @@ brokerClusterName = DefaultCluster
 brokerName = broker-a
 brokerId = 0
 deleteWhen = 04
+autoCreateTopicEnable = true
 fileReservedTime = 48
 brokerRole = ASYNC_MASTER
 flushDiskType = ASYNC_FLUSH
 #set `brokerIP1` if you want to set physical IP as broker IP.
-brokerIP1=127.0.0.1 #change you own physical IP Address
+brokerIP1=127.0.0.1
