--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,6 @@ services:
 
   namesrv:
     image: apacherocketmq/rocketmq:4.5.0
-    container_name: rmqnamesrv
     ports:
       - 9876:9876
     # volumes:
@@ -45,7 +44,6 @@ services:
     command: sh mqnamesrv
   broker:
     image: apacherocketmq/rocketmq:4.5.0
-    container_name: rmqbroker
     ports:
       - 10909:10909
       - 10911:10911
@@ -57,3 +55,25 @@ services:
     command: sh mqbroker -n namesrv:9876 -c ../conf/broker.conf
     depends_on:
       - namesrv
+  mqconsole:
+    image: styletang/rocketmq-console-ng
+    ports:
+      - 19876:8080
+    environment:
+      JAVA_OPTS: -Drocketmq.namesrv.addr=namesrv:9876 -Dcom.rocketmq.sendMessageWithVIPChannel=falses
+    depends_on:
+      - namesrv
+  jaeger:
+    image: jaegertracing/all-in-one:1.32
+    ports:
+      - 16686:16686
+      - 14268:14268
+      - 14269:14269
+      - 14250:14250
+      - 9411:9411
+      - 5778:5778
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+    environment:
+      COLLECTOR_ZIPKIN_HOST_PORT: :9411
