--- a/config/exampleserver/local-live.toml
+++ b/config/exampleserver/local-live.toml
@@ -1,17 +1,65 @@
+[jupiter]
+    [jupiter.logger.default]
+        debug = true
+        level = "info"
+        dir = "./logs/"
+    [jupiter.logger.jupiter]
+        debug = true
+        level = "info"
+        dir = "./logs/"
+
+    [jupiter.trace.jaeger]
+        sampler = 1
+
+    [jupiter.registry.etcdv3]
+        configKey = "jupiter.etcdv3.local"
+
+    [jupiter.etcdv3.local]
+        endpoints = ["http://127.0.0.1:2379"]
+        timeout = "3s"
+
 [jupiter.server]
     [jupiter.server.http]
         port = 9527
     [jupiter.server.grpc]
         port = 9528
 
+[jupiter.client]
     [jupiter.client.example]
         address = "127.0.0.1:9528"
         onDialError = "error"
+        block = false
 
-[jupiter.logger]
-    [jupiter.logger.default]
-        level = "info"
-        dir = "./logs/"
-    [jupiter.logger.jupiter]
-        level = "info"
-        dir = "./logs/"
+    [jupiter.mysql.example]
+        dsn = "root:123456@tcp(127.0.0.1:3306)/jupiter?timeout=20s&readTimeout=20s"
+        debug = true
+        maxIdleConns = 50
+        connMaxLifeTime = "20m"
+        level = "panic"
+        slowThreshold = "400ms"
+        dialTimeout = "1s"
+
+    [jupiter.rocketmq.example]
+        [jupiter.rocketmq.example.consumer]
+            enable = true
+            addr = ["127.0.0.1:9876"]
+            group = "testGroup"
+            dialTimeout = "3s"
+            rwTimeout = "3s"
+            topic = "DefaultCluster"
+            subExpression = "*"
+            rate = 100
+            enableTrace = true
+        [jupiter.rocketmq.example.producer]
+            group = "testGroup"
+            addr = ["127.0.0.1:9876"]
+            dialTimeout = "3s"
+            rwTimeout = "3s"
+            topic = "DefaultCluster"
+            enableTrace = true
+
+[jupiter.resty.example]
+    addr = "http://127.0.0.1:9527"
+
+    # [jupiter.redis.example]
+    #     addrs = ["127.0.0.1:6379"]
