feat: support juno

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,19 @@ services:
     command: redis-server
     # volumes:
     #   - ./data/cache:/data
-  db:
+  mysql:
     image: mysql:5.7
     # volumes:
-    #   - ./data/db:/var/run/mysqld/
+    #   - ./data/mysql:/var/run/mysqld/
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: jupiter
+      MYSQL_ROOT_HOST: "%"
     ports:
       - 3306:3306
+    volumes:
+      - ./data/config/initdb:/docker-entrypoint-initdb.d
+
   adminer:
     image: adminer
     restart: always
@@ -77,3 +80,38 @@ services:
       - 6832:6832/udp
     environment:
       COLLECTOR_ZIPKIN_HOST_PORT: :9411
+
+  prometheus:
+    image: prom/prometheus:latest
+    restart: always
+    volumes:
+      - ./data/config/prometheus/juno-prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    depends_on:
+      - etcd
+
+  grafana:
+    image: grafana/grafana:latest
+    restart: always
+    volumes:
+      - ./data/config/juno/juno-grafana.ini:/etc/grafana/grafana.ini
+    ports:
+      - 3000:3000
+    depends_on:
+      - juno-admin
+      - prometheus
+
+  juno-admin:
+    image: ghcr.io/douyu/juno-admin:latest
+    ports:
+      - 50000:50000
+      - 50002:50002
+      - 50004:50004
+
+    volumes:
+      - ./data/config/juno/:/root/juno/config
+    depends_on:
+      - mysql
+      - prometheus
+      - etcd
