--- a/data/config/grafana/juno-grafana.ini
+++ b/data/config/grafana/juno-grafana.ini
@@ -80,7 +80,7 @@ socket = /tmp/grafana.sock
 ;password =
 # Use either URL or the previous fields to configure the database
 # Example: mysql://user:secret@host:port/database
-url = mysql://root:123456@mysql:3306/grafana
+url = mysql://root:root@mysql:3306/grafana
 
 # Max idle conn setting default is 2
 max_idle_conn = 2
