--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.3'
 services:
-  cache:
+  redis:
     image: redis:6.2-alpine
     restart: always
     ports:
@@ -10,22 +10,40 @@ services:
     #   - ./data/cache:/data
   mysql:
     image: mysql:5.7
+    restart: always
     # volumes:
     #   - ./data/mysql:/var/run/mysqld/
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_ROOT_HOST: "%"
     ports:
       - 3306:3306
     volumes:
       - ./data/config/initdb:/docker-entrypoint-initdb.d
-
+      # - ./data/mysql/data:/var/lib/mysql
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u",
+          "root",
+          "-proot"
+        ]
+      timeout: 20s
+      retries: 10
+  # http://localhost:8080
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
+    depends_on:
+      - mysql
   etcd:
     image: "quay.io/coreos/etcd:v3.3"
     environment:
@@ -52,12 +70,11 @@ services:
       - 10911:10911
       - 10912:10912
     volumes:
-      # - ./data/broker/logs:/home/rocketmq/logs
-      # - ./data/broker/store:/home/rocketmq/store
-      - ./data/broker/conf/broker.conf:/home/rocketmq/rocketmq-4.5.0/conf/broker.conf
+      - ./data/config/broker/broker.conf:/home/rocketmq/rocketmq-4.5.0/conf/broker.conf
     command: sh mqbroker -n namesrv:9876 -c ../conf/broker.conf
     depends_on:
       - namesrv
+  # http://localhost:19876
   mqconsole:
     image: styletang/rocketmq-console-ng
     ports:
@@ -81,6 +98,7 @@ services:
     environment:
       COLLECTOR_ZIPKIN_HOST_PORT: :9411
 
+  # http://localhost:9090
   prometheus:
     image: prom/prometheus:latest
     restart: always
@@ -91,6 +109,7 @@ services:
     depends_on:
       - etcd
 
+  #http://localhost:3000
   grafana:
     image: grafana/grafana:latest
     restart: always
@@ -99,19 +118,30 @@ services:
     ports:
       - 3000:3000
     depends_on:
-      - juno-admin
-      - prometheus
+      - mysql
 
   juno-admin:
     image: ghcr.io/douyu/juno-admin:latest
+    restart: always
     ports:
-      - 50000:50000
       - 50002:50002
       - 50004:50004
-
     volumes:
       - ./data/config/juno/:/root/juno/config
+      - ./data/config/wait-for.sh:/root/juno/wait-for.sh
+    command: sh -c '/root/juno/wait-for.sh mysql:3306 -- /root/juno/config/entry.sh'
     depends_on:
       - mysql
       - prometheus
       - etcd
+
+  juno-agent:
+    image: ghcr.io/douyu/juno-agent:latest
+    restart: always
+    ports:
+      - 50010:50010
+    volumes:
+      - ./data/config/juno-agent/:/app/config
+    depends_on:
+      - etcd
+      - prometheus
