--- a/data/config/juno/single-region-admin.toml
+++ b/data/config/juno/single-region-admin.toml
@@ -1,27 +1,30 @@
-#################################### APP Config #########################
 [app]
-    secretKey = "ASDFASDFASDF" # hashStatecode
-    mode = "local"             # single without proxy, multiple with proxy
+    secretKey = "ASDFASDFASDF"      # hashStatecode
+    mode = "local"                  # single without proxy, multiple with proxy
+    productionEnvs = ["production"]
 
 [configure]
     dir = "/tmp/www/server"
     prefix = "juno-agent"
-    [configure.agent]
-        port = 50010
+
+[agent]
+    port = 60814
+    secret = "12341234123412341234123412341234"
 
 [logger.system]
-    debug = true         # 是否在命令行输出
-    enableConsole = true # 是否按命令行格式输出
+    debug = false         # 是否在命令行输出
+    enableConsole = false # 是否按命令行格式输出
     level = "debug"
     async = false
-    name = "system.json" # 日志名称
+    name = "system.json"  # 日志名称
     dir = "./logs"
+
 [logger.biz]
-    debug = true         # 是否在命令行输出
-    enableConsole = true # 是否按命令行格式输出
+    debug = false         # 是否在命令行输出
+    enableConsole = false # 是否按命令行格式输出
     level = "debug"
     async = false
-    name = "biz.json"    # 日志名称
+    name = "biz.json"     # 日志名称
     dir = "./logs"
 
 [session]
@@ -30,10 +33,14 @@
     type = ""
 
 [register]
-    enable = false
+    enable = true
     connectTimeout = "1s"
     endpoints = ["http://etcd:2379"]
     secure = false
+
+[grafanaProxy]
+    enable = true
+    name = "grafana"
 
 #################################### Server ##############################
 [server.http]
@@ -43,21 +50,33 @@
     port = 50002
     # The public facing domain name used to access grafana from a browser
     domain = "localhost"
+    rootUrl = "http://127.0.0.1:50002/"
 
-    rootUrl = "http://jupiterconsole.douyu.com/"
-[server.govern]
-    # The ip address to bind to, empty will bind to all interfaces
-    host = "0.0.0.0"
-    # The http port to use
-    port = 50004
+    # [server.govern]
+    #     # The ip address to bind to, empty will bind to all interfaces
+    #     host = "0.0.0.0"
+    #     # The http port to use
+    #     port = 50004
 
 #################################### Jupiter Config #########################
 [jupiter]
+
+    #################################### Config Dependency Parse #########################
     [jupiter.cron]
+
         [jupiter.cron.parse]
             withSeconds = false
             concurrentDelay = 10
             immediatelyRun = false
+
+[jupiter.server]
+
+    [jupiter.server.governor]
+        # The ip address to bind to, empty will bind to all interfaces
+        host = "0.0.0.0"
+        # The http port to use
+        port = 50004
+        enable = true
 
 #################################### Database ##############################
 [database]
@@ -71,8 +90,12 @@
 
 #################################### Proxy ##############################
 [clientProxy]
+    [clientProxy.httpRouter]
+        governConfig = "/debug/config"
+    [clientProxy.singleProxy.registerEtcd]
+        endpoints = ["http://etcd:2379"]
 
-    [clientProxy.singleProxy.etcd]
+    [clientProxy.singleProxy.defaultEtcd]
         endpoints = ["http://etcd:2379"]
 
 [auth]
@@ -105,8 +128,8 @@
     [auth.github]
         enable = true
         allowSignUp = true
-        clientId = "a6633e5544e60bd2574e"
-        clientSecret = "7c6f51d97fc93d5d575ebd13115b20f397807549"
+        clientId = "b88bb66e4d3114ed1669"
+        clientSecret = "a42917ca55917f330eb913cc9504cd6a1aeecabc"
         scopes = ["user:email", "read:org"]
         authUrl = "https://github.com/login/oauth/authorize"
         tokenUrl = "https://github.com/login/oauth/access_token"
@@ -123,3 +146,62 @@
     autoLoadInternal = 60
     # 资源配置
     resourceFile = './config/resource.yaml'
+
+[proxyAuth]
+    token = "token" # 用于对 Juno Proxy 的请求进行授权
+
+[grpcTest]
+    enable = false
+    # PB文件目录，该目录下的所有PB文件会被遍历
+    protoDir = '../proto'
+
+#################################### Go Dep Auth #########################
+[godep.gitlab]
+    host = "https://gitlab.com"
+    token = "RgZev8zy6dtP2y8EA4sB"
+    frameName = "gitlab.com/douyu/jupiter"
+
+[codeplatform]
+    token = "token" # 代码仓库访问凭证
+
+[testplatform]
+    enable = false # 是否启用测试平台
+
+    [testplatform.worker]
+        localQueueDir = "/tmp/localworkerqueue"
+        heartbeatTimeout = "6s"
+
+#################################### notice #########################
+[notice]
+
+    [notice.email]
+        serverHost = "smtp.163.com"
+        serverPort = 465
+        fromEmail = "xxx@163.com"
+        fromPasswd = "xxx"
+        toers = ["xxxxxxx@qq.com"]
+        cCers = ["xxx@qq.com"]
+
+    [notice.ding]
+        webHook = "http://XXX.com"
+        msgType = "text"
+
+# 系统事件的 RocektMQ 配置
+[junoevent.rocketmq]
+    enable = false            # 开关.如果为false，则系统事件不写MQ.
+    addr = ["127.0.0.1:9876"] # mq地址
+    topic = "juno_test_job"   # mq topic
+    group = "juno_devops_go"  # mq producer group
+    retry = 3                 # MQ写重试次数
+    dialTimeout = "3s"        # MQ连接超时时间
+
+[k8s]
+    enable = true
+    prefix = [""]
+    doc = ""
+[aliyun] # 阿里云日志秘钥配置
+    accessKeyId = ""
+    secret = ""
+    roleArn = ""
+    [aliyun.regions]
+        "华北2（北京）" = "cn-beijing"
