--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3.3'
+
+# jaeger: http://localhost:16686
+# prometheus: http://localhost:9090
+# grafana: http://localhost:3000
+# juno-admin: http://localhost:50002
+
 services:
-  cache:
+  redis:
     image: redis:6.2-alpine
     restart: always
     ports:
@@ -8,21 +14,42 @@ services:
     command: redis-server
     # volumes:
     #   - ./data/cache:/data
-  db:
+  mysql:
     image: mysql:5.7
+    restart: always
     # volumes:
-    #   - ./data/db:/var/run/mysqld/
+    #   - ./data/mysql:/var/run/mysqld/
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: jupiter
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_HOST: "%"
     ports:
       - 3306:3306
+    volumes:
+      - ./data/config/initdb:/docker-entrypoint-initdb.d
+      # - ./data/mysql/data:/var/lib/mysql
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u",
+          "root",
+          "-proot"
+        ]
+      timeout: 20s
+      retries: 10
+
   adminer:
-    image: adminer
+    image: adminer:4.8.1
     restart: always
     ports:
       - 8080:8080
+    depends_on:
+      - mysql
   etcd:
     image: "quay.io/coreos/etcd:v3.3"
     environment:
@@ -49,20 +76,20 @@ services:
       - 10911:10911
       - 10912:10912
     volumes:
-      # - ./data/broker/logs:/home/rocketmq/logs
-      # - ./data/broker/store:/home/rocketmq/store
-      - ./data/broker/conf/broker.conf:/home/rocketmq/rocketmq-4.5.0/conf/broker.conf
+      - ./data/config/broker/broker.conf:/home/rocketmq/rocketmq-4.5.0/conf/broker.conf
     command: sh mqbroker -n namesrv:9876 -c ../conf/broker.conf
     depends_on:
       - namesrv
+
   mqconsole:
-    image: styletang/rocketmq-console-ng
+    image: apacherocketmq/rocketmq-dashboard:1.0.0
     ports:
       - 19876:8080
     environment:
       JAVA_OPTS: -Drocketmq.namesrv.addr=namesrv:9876 -Dcom.rocketmq.sendMessageWithVIPChannel=falses
     depends_on:
       - namesrv
+
   jaeger:
     image: jaegertracing/all-in-one:1.32
     ports:
@@ -77,3 +104,56 @@ services:
       - 6832:6832/udp
     environment:
       COLLECTOR_ZIPKIN_HOST_PORT: :9411
+
+  prometheus:
+    image: prom/prometheus:latest
+    restart: always
+    volumes:
+      - ./data/config/prometheus/juno-prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    depends_on:
+      - etcd
+
+  grafana:
+    image: grafana/grafana:latest
+    restart: always
+    volumes:
+      - ./data/config/juno/juno-grafana.ini:/etc/grafana/grafana.ini
+    ports:
+      - 3000:3000
+    depends_on:
+      - mysql
+
+  juno-admin:
+    image: ghcr.io/douyu/juno-admin:latest
+    restart: always
+    ports:
+      - 50002:50002
+      - 50004:50004
+    volumes:
+      - ./data/config/juno/:/root/juno/config
+    depends_on:
+      - mysql
+      - prometheus
+      - etcd
+
+  juno-admin-init:
+    image: ghcr.io/douyu/juno-admin:latest
+    volumes:
+      - ./data/config/juno/:/root/juno/config
+      - ./data/config/wait-for.sh:/root/juno/wait-for.sh
+    command: sh -c '/root/juno/wait-for.sh mysql:3306 -- /root/juno/config/entry.sh'
+    depends_on:
+      - juno-admin
+
+  juno-agent:
+    image: ghcr.io/douyu/juno-agent:latest
+    restart: always
+    ports:
+      - 50010:50010
+    volumes:
+      - ./data/config/juno-agent/:/app/config
+    depends_on:
+      - etcd
+      - prometheus
