--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,7 +35,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: docker-compose
-        run: docker-compose up -d
+        run: docker-compose -f deployment/docker-compose.yml up -d
 
       - uses: actions/cache@v3
         with:
