--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,154 +6,11 @@ version: '3.3'
 # juno-admin: http://localhost:50002
 
 services:
-  redis:
-    image: redis:6.2-alpine
-    restart: always
-    ports:
-      - 6379:6379
-    command: redis-server
-    # volumes:
-    #   - ./data/cache:/data
-  mysql:
-    image: mysql:5.7
-    restart: always
-    # volumes:
-    #   - ./data/mysql:/var/run/mysqld/
-    command: --default-authentication-plugin=mysql_native_password
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_ROOT_HOST: "%"
-    ports:
-      - 3306:3306
-    volumes:
-      - ./data/config/initdb:/docker-entrypoint-initdb.d
-      # - ./data/mysql/data:/var/lib/mysql
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "mysqladmin",
-          "ping",
-          "-h",
-          "localhost",
-          "-u",
-          "root",
-          "-proot"
-        ]
-      timeout: 20s
-      retries: 10
-
-  adminer:
-    image: adminer:4.8.1
-    restart: always
-    ports:
-      - 8080:8080
-    depends_on:
-      - mysql
-  etcd:
-    image: "quay.io/coreos/etcd:v3.3"
-    environment:
-      ETCD_ADVERTISE_CLIENT_URLS: "http://0.0.0.0:2379"
-      ETCD_LISTEN_CLIENT_URLS: "http://0.0.0.0:2379"
-      ETCDCTL_API: "3"
-      ALLOW_NONE_AUTHENTICATION: "yes"
-    ports:
-      - 2379:2379
-      - 2380:2380
-      - 4001:4001
-
-  namesrv:
-    image: apacherocketmq/rocketmq:4.5.0
-    ports:
-      - 9876:9876
-    # volumes:
-    #   - ./data/namesrv/logs:/home/rocketmq/logs
-    command: sh mqnamesrv
-  broker:
-    image: apacherocketmq/rocketmq:4.5.0
-    ports:
-      - 10909:10909
-      - 10911:10911
-      - 10912:10912
-    volumes:
-      - ./data/config/broker/broker.conf:/home/rocketmq/rocketmq-4.5.0/conf/broker.conf
-    command: sh mqbroker -n namesrv:9876 -c ../conf/broker.conf
-    depends_on:
-      - namesrv
-
-  mqconsole:
-    image: apacherocketmq/rocketmq-dashboard:1.0.0
-    ports:
-      - 19876:8080
-    environment:
-      JAVA_OPTS: -Drocketmq.namesrv.addr=namesrv:9876 -Dcom.rocketmq.sendMessageWithVIPChannel=falses
-    depends_on:
-      - namesrv
-
-  jaeger:
-    image: jaegertracing/all-in-one:1.32
-    ports:
-      - 16686:16686
-      - 14268:14268
-      - 14269:14269
-      - 14250:14250
-      - 9411:9411
-      - 5778:5778
-      - 5775:5775/udp
-      - 6831:6831/udp
-      - 6832:6832/udp
-    environment:
-      COLLECTOR_ZIPKIN_HOST_PORT: :9411
-
-  prometheus:
-    image: prom/prometheus:latest
+  exampleserver:
+    build:
+      context: .
+      dockerfile: ./cmd/exampleserver/Dockerfile
     restart: always
     volumes:
-      - ./data/config/prometheus/juno-prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
-    depends_on:
-      - etcd
-
-  grafana:
-    image: grafana/grafana:latest
-    restart: always
-    volumes:
-      - ./data/config/juno/juno-grafana.ini:/etc/grafana/grafana.ini
-    ports:
-      - 3000:3000
-    depends_on:
-      - mysql
-
-  juno-admin:
-    image: ghcr.io/douyu/juno-admin:latest
-    restart: always
-    ports:
-      - 50002:50002
-      - 50004:50004
-    volumes:
-      - ./data/config/juno/:/root/juno/config
-    depends_on:
-      - mysql
-      - prometheus
-      - etcd
-
-  juno-admin-init:
-    image: ghcr.io/douyu/juno-admin:latest
-    volumes:
-      - ./data/config/juno/:/root/juno/config
-      - ./data/config/wait-for.sh:/root/juno/wait-for.sh
-    command: sh -c '/root/juno/wait-for.sh mysql:3306 -- /root/juno/config/entry.sh'
-    depends_on:
-      - juno-admin
-
-  juno-agent:
-    image: ghcr.io/douyu/juno-agent:latest
-    restart: always
-    ports:
-      - 50010:50010
-    volumes:
-      - ./data/config/juno-agent/:/app/config
-    depends_on:
-      - etcd
-      - prometheus
+      - .:/src
+    network_mode: host
