--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,7 +18,7 @@ linters:
     - ineffassign
     - staticcheck
     - structcheck
-    - typecheck
+    # - typecheck
     - unused
     - varcheck
     - bodyclose
