--- a/config/exampleserver/local-live.toml
+++ b/config/exampleserver/local-live.toml
@@ -29,7 +29,7 @@
 [jupiter.grpc]
     [jupiter.grpc.example]
         address = "127.0.0.1:9528"
-        onDialError = "error"
+        level = "error"
         block = false
 
     [jupiter.mysql.example]
