--- a/config/exampleserver/local-live.toml
+++ b/config/exampleserver/local-live.toml
@@ -63,5 +63,18 @@
 [jupiter.resty.example]
     addr = "http://127.0.0.1:9527"
 
-    # [jupiter.redis.example]
-    #     addrs = ["127.0.0.1:6379"]
+    [jupiter.redisgo.example]
+        [jupiter.redisgo.example.stub]
+            debug=true
+            maxIdle=10
+            maxActive=50
+            dialTimeout="2s"
+            readTimeout="2s"
+            idleTimeout="60s"
+            enableAccessLog = true
+            [jupiter.redisgo.example.stub.master]
+                addr="redis://:password@127.0.0.1:6379"
+            [jupiter.redisgo.example.stub.slaves]
+                addr=[
+                    "redis://:password@127.0.0.1:6379",
+                ]
