--- a/config/exampleserver/local-live.toml
+++ b/config/exampleserver/local-live.toml
@@ -7,16 +7,20 @@
 
     [jupiter.logger.default]
         debug = true
-        level = "info"
+        level = "debug"
         dir = "./logs/"
     [jupiter.logger.jupiter]
         debug = true
-        level = "info"
+        level = "debug"
         dir = "./logs/"
 
     [jupiter.trace.jaeger]
         endpoint = "http://localhost:14268/api/traces"
         sampler = 1
+
+        # [jupiter.trace.otelgrpc]
+        #     endpoint = "localhost:4317"
+        #     sampler = 1
 
 [jupiter.server]
     [jupiter.server.http]
