--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -60,7 +60,9 @@ jobs:
       - name: Test
         run: |
           go test -coverprofile=coverage.txt -covermode=atomic ./...
+          make e2e-test
       - name: Codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{secrets.CODECOV_TOKEN}}
+          files: ./coverage.txt, ./tests/e2e/coverage.txt
