--- a/.github/workflows/buf.yaml
+++ b/.github/workflows/buf.yaml
@@ -14,12 +14,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3.2.0
       - uses: bufbuild/buf-setup-action@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: bufbuild/buf-lint-action@v1
         with:
-          input: 'api'
+          input: "api"
       - uses: bufbuild/buf-breaking-action@v1
         with:
-          input: 'api'
+          input: "api"
           # The 'main' branch of the GitHub repository that defines the module.
           # Note we specify the subdir to compare against.
-          against: 'https://github.com/${GITHUB_REPOSITORY}.git#branch=main,ref=HEAD~1,subdir=api'
+          against: "https://github.com/${GITHUB_REPOSITORY}.git#branch=main,ref=HEAD~1,subdir=api"
