--- a/api/buf.yaml
+++ b/api/buf.yaml
@@ -1,4 +1,10 @@
 version: v1
+
+deps:
+  - buf.build/googleapis/googleapis
+  - buf.build/srikrsna/protoc-gen-gotag
+  - buf.build/grpc-ecosystem/grpc-gateway
+
 lint:
   ignore:
     - vendor
