--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,17 +1,32 @@
 version: v1
-managed:
-  enabled: true
 
-  # Go
-  go_package_prefix:
-    default: github.com/douyu/jupiter-layout/gen/api/go
 plugins:
-  - remote: buf.build/protocolbuffers/plugins/go:v1.27.1-1
-    out: gen/api/go
+  - name: go
+    out: api
     opt:
       - paths=source_relative
-  - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
-    out: gen/api/go
+
+  - name: go-grpc
+    out: api
     opt:
       - require_unimplemented_servers=false
       - paths=source_relative
+
+  - name: go-echo
+    out: api
+    opt: 
+      - paths=source_relative
+
+  - name: go-gin
+    out: api
+    opt: 
+      - paths=source_relative
+
+  - name: openapiv2
+    out: api
+    opt: 
+      - disable_default_errors=true
+      # - enums_as_ints=true
+      # - omit_enum_default_value=true
+      - generate_unbound_methods=true
+      - include_package_in_tags=true
