--- a/.github/workflows/buf.yaml
+++ b/.github/workflows/buf.yaml
@@ -20,6 +20,7 @@ jobs:
         with:
           input: "api"
       - uses: bufbuild/buf-breaking-action@v1
+        continue-on-error: true
         with:
           input: "api"
           # The 'main' branch of the GitHub repository that defines the module.
