--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Test
         run: |
-          go test -coverprofile=coverage.txt -covermode=atomic ./...
+          make test
           make e2e-test
 
       - name: Codecov
