--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     command: redis-server
     # volumes:
     #   - ./data/cache:/data
-  mysql:
+  db:
     image: mysql:5.7
     restart: always
     # volumes:
@@ -39,13 +39,6 @@ services:
       timeout: 20s
       retries: 10
 
-  adminer:
-    image: adminer:4.8.1
-    restart: always
-    ports:
-      - 8080:8080
-    depends_on:
-      - mysql
   etcd:
     image: "quay.io/coreos/etcd:v3.3"
     restart: always
@@ -84,19 +77,8 @@ services:
     depends_on:
       - namesrv
 
-  mqconsole:
-    image: apacherocketmq/rocketmq-dashboard:1.0.0
-    restart: always
-    ports:
-      - 19876:8080
-    environment:
-      JAVA_OPTS: -Drocketmq.namesrv.addr=namesrv:9876 -Dcom.rocketmq.sendMessageWithVIPChannel=falses
-      JAVA_OPT_EXT: -Xmx256m -Xms256m -Xmn128m
-    depends_on:
-      - namesrv
-
   jaeger:
-    image: jaegertracing/all-in-one:1.32
+    image: jaegertracing/all-in-one:1.42
     restart: always
     ports:
       - 16686:16686
@@ -112,7 +94,7 @@ services:
       COLLECTOR_ZIPKIN_HOST_PORT: :9411
 
   prometheus:
-    image: prom/prometheus:v2.39.1
+    image: prom/prometheus:v2.42.0
     restart: always
     volumes:
       - ./data/config/prometheus/juno-prometheus.yml:/etc/prometheus/prometheus.yml
@@ -122,17 +104,17 @@ services:
       - etcd
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:9.3.6
     restart: always
     # volumes:
     #   - ./data/config/juno/juno-grafana.ini:/etc/grafana/grafana.ini
     ports:
       - 3000:3000
     depends_on:
-      - mysql
+      - db
 
   juno-admin:
-    image: ghcr.io/douyu/juno-admin:latest
+    image: ghcr.io/douyu/juno-admin:v0.5.6
     restart: always
     ports:
       - 50002:50002
@@ -141,7 +123,7 @@ services:
       - ./data/config/juno/:/root/juno/config
     command: sh -c '/root/juno/config/wait-for.sh mysql:3306 -- /root/juno/config/entry.sh'
     depends_on:
-      - mysql
+      - db
 
   juno-agent:
     image: ghcr.io/douyu/juno-agent:latest
@@ -155,7 +137,7 @@ services:
       - prometheus
 
   clickhouse:
-    image: clickhouse/clickhouse-server:22.7
+    image: clickhouse/clickhouse-server:23.1.3.5-alpine
     restart: on-failure
     environment:
       CLICKHOUSE_DB: uptrace
@@ -176,7 +158,7 @@ services:
       - '9000:9000'
 
   uptrace:
-    image: 'uptrace/uptrace:1.2.0-rc.2'
+    image: 'uptrace/uptrace:1.3.1'
     #image: 'uptrace/uptrace-dev:latest'
     restart: on-failure
     volumes:
@@ -219,24 +201,22 @@ services:
     image: timberio/vector:0.24.X-alpine
     volumes:
       - ./data/config/uptrace/vector.toml:/etc/vector/vector.toml:ro
-  # jaeger-agent:
-  #   image: jaegertracing/jaeger-agent:latest
-  #   command: ['--reporter.grpc.host-port=localhost:14250']
-  #   network_mode: host
-  # jaeger-hot-rod:
-  #   image: jaegertracing/example-hotrod:latest
-  #   command: ['all']
-  #   network_mode: host
-  #   environment:
-  #     - JAEGER_AGENT_HOST=localhost
-  #     - JAEGER_AGENT_PORT=6831
-  #   depends_on:
-  #     - jaeger-agent
 
-  # volumes:
-  #   uptrace_data:
-  #     driver: local
-  #   ch_data_1:
-  #     driver: local
-  #   alertmanager_data:
-  #     driver: local
+  mqconsole:
+    image: apacherocketmq/rocketmq-dashboard:1.0.0
+    restart: always
+    ports:
+      - 19876:8080
+    environment:
+      JAVA_OPTS: -Drocketmq.namesrv.addr=namesrv:9876 -Dcom.rocketmq.sendMessageWithVIPChannel=falses
+      JAVA_OPT_EXT: -Xmx256m -Xms256m -Xmn128m
+    depends_on:
+      - namesrv
+
+  adminer:
+    image: adminer:4.8.1
+    restart: always
+    ports:
+      - 8080:8080
+    depends_on:
+      - db
