--- a/deployment/data/config/juno/single-region-admin.toml
+++ b/deployment/data/config/juno/single-region-admin.toml
@@ -83,7 +83,7 @@
     enable = true
     connMaxLifetime = "300s"
     debug = true
-    dsn = "root:root@tcp(mysql:3306)/juno?charset=utf8&parseTime=True&loc=Local&readTimeout=1s&timeout=1s&writeTimeout=3s"
+    dsn = "root:root@tcp(db:3306)/juno?charset=utf8&parseTime=True&loc=Local&readTimeout=1s&timeout=1s&writeTimeout=3s"
     level = "panic"
     maxIdleConns = 50
     maxOpenConns = 100
