--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,17 +1,94 @@
 version: '3.3'
 
-# jaeger: http://localhost:16686
-# prometheus: http://localhost:9090
-# grafana: http://localhost:3000
-# juno-admin: http://localhost:50002
-
 services:
-  juiter-layout:
-    image: ghcr.io/douyu/jupiter-layout:latest
+  redis:
+    image: redis:6.2-alpine
     restart: always
-    labels:
-      - kompose.volume.type=configMap
     ports:
-      - "9527:9527"
-      - "9528:9528"
-      - "9529:9529"
+      - 6379:6379
+    command: redis-server
+    # volumes:
+    #   - ./data/cache:/data
+  mysql:
+    image: mysql:5.7
+    restart: always
+    # volumes:
+    #   - ./data/mysql:/var/run/mysqld/
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_HOST: "%"
+
+    ports:
+      - 3306:3306
+    volumes:
+      - ./data/config/initdb:/docker-entrypoint-initdb.d
+      # - ./data/mysql/data:/var/lib/mysql
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u",
+          "root",
+          "-proot"
+        ]
+      timeout: 20s
+      retries: 10
+
+  etcd:
+    image: "quay.io/coreos/etcd:v3.3"
+    restart: always
+    environment:
+      ETCD_ADVERTISE_CLIENT_URLS: "http://0.0.0.0:2379"
+      ETCD_LISTEN_CLIENT_URLS: "http://0.0.0.0:2379"
+      ETCDCTL_API: "3"
+      ALLOW_NONE_AUTHENTICATION: "yes"
+    ports:
+      - 2379:2379
+      - 2380:2380
+      - 4001:4001
+
+  namesrv:
+    image: apacherocketmq/rocketmq:4.5.0
+    restart: always
+    ports:
+      - 9876:9876
+    # volumes:
+    #   - ./data/namesrv/logs:/home/rocketmq/logs
+    command: sh mqnamesrv
+    environment:
+      JAVA_OPT_EXT: -Xmx256m -Xms256m -Xmn128m
+  broker:
+    image: apacherocketmq/rocketmq:4.5.0
+    restart: always
+    ports:
+      - 10909:10909
+      - 10911:10911
+      - 10912:10912
+    volumes:
+      - ./data/config/broker/broker.conf:/home/rocketmq/rocketmq-4.5.0/conf/broker.conf
+    environment:
+      JAVA_OPT_EXT: -Xmx256m -Xms256m -Xmn128m
+    command: sh mqbroker -n namesrv:9876 -c ../conf/broker.conf
+    depends_on:
+      - namesrv
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.32
+    restart: always
+    ports:
+      - 16686:16686
+      - 14268:14268
+      - 14269:14269
+      - 14250:14250
+      - 9411:9411
+      - 5778:5778
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+    environment:
+      COLLECTOR_ZIPKIN_HOST_PORT: :9411
