--- a/.github/workflows/release-latest.yml
+++ b/.github/workflows/release-latest.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Build exampleserver
         run: |
-          go build ./cmd/exampleserver -o exampleserver
+          go build ./cmd/exampleserver
 
       - name: image_name
         run: echo ${{ env.IMAGE_NAME }}
