--- a/cmd/exampleserver/Dockerfile
+++ b/cmd/exampleserver/Dockerfile
@@ -2,11 +2,10 @@ FROM alpine:latest
 
 WORKDIR /app
 
-COPY exampleserver /app/bin/exampleserver
-COPY config /app/config
+COPY exampleserver /app/exampleserver
 
 EXPOSE 9527
 EXPOSE 9528
 EXPOSE 9529
 
-ENTRYPOINT ["/app/bin/exampleserver", "--config", "config/exampleserver/local-live.toml"]
+CMD ["/app/exampleserver"]
